Bug 59291 - [PATCH]perf (+tui) segfaults when certain actions are performed
Summary: [PATCH]perf (+tui) segfaults when certain actions are performed
Status: RESOLVED CODE_FIX
Alias: None
Product: Tracing/Profiling
Classification: Unclassified
Component: Perf tool (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Arnaldo Carvalho de Melo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-05 02:04 UTC by v.karpov
Modified: 2016-05-02 20:06 UTC (History)
2 users (show)

See Also:
Kernel Version: Any
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Fix END key handling in the argv browser used in the ui menu widget (503 bytes, patch)
2013-06-05 08:16 UTC, Arnaldo Carvalho de Melo
Details | Diff

Description v.karpov 2013-06-05 02:04:13 UTC
$ perf record ls
$ perf report

Press 'down enter end'

Result:

Program received signal SIGSEGV, Segmentation fault.
0x00007f100a157801 in __strlen_sse2_pminub () from /usr/lib/libc.so.6
(gdb) bt
#0  0x00007f100a157801 in __strlen_sse2_pminub () from /usr/lib/libc.so.6
#1  0x00007f100c877515 in SLsmg_write_wrapped_string () from /usr/lib/libslang.so.2
#2  0x000000000049ffe2 in ui_browser__argv_refresh (browser=0x7fff33f83000) at ui/browser.c:591
#3  0x000000000049ecfe in __ui_browser__refresh (browser=browser@entry=0x7fff33f83000) at ui/browser.c:307
#4  0x000000000049fb0a in ui_browser__run (browser=browser@entry=0x7fff33f83000, delay_secs=delay_secs@entry=0) at ui/browser.c:362
#5  0x00000000004a8db5 in popup_menu__run (menu=0x7fff33f83000) at ui/tui/util.c:35
Comment 1 Arnaldo Carvalho de Melo 2013-06-05 08:16:19 UTC
Created attachment 103561 [details]
Fix END key handling in the argv browser used in the ui menu widget
Comment 2 Arnaldo Carvalho de Melo 2013-06-05 08:16:41 UTC
Can you try the patch I just attached?
Comment 3 v.karpov 2013-06-05 10:10:12 UTC
(In reply to comment #2)
> Can you try the patch I just attached?

Yes, it fixes the issue, obrigado.

Note You need to log in before you can comment on or make changes to this bug.